Updating resolv.conf template
This adds the sortlist argument to the template

--- a/templates/resolv.conf.erb
+++ b/templates/resolv.conf.erb
@@ -9,6 +9,9 @@ search <%= @searchpath.join(" ") %>
 <% else -%>
 search <%= @searchpath %>
 <% end -%>
+<%- if @sortlist -%>
+sortlist <%= @sortlist %>
+<%- end -%>
 <% end -%>
 <% @nameservers.each do |ns| -%>
 nameserver <%= ns %>
